--- a/style.css
+++ b/style.css
@@ -1,42 +1,109 @@
 body {
     margin: 0px;
-  }
-  
-  #game_grid {
-    border: 2px tomato solid;
-    width: 600px;
-    height: 400px;
-    margin: auto;
+}
+
+.blue-button {
+    background-color: blue;
+    color: white;
+}
+
+#dark_theme_button {
+    margin-left: 10px;
+    background-color: black;
+    color: white;
+}
+
+/* Dark Theme styles */
+body.dark-theme {
+    background-color: black;
+    color: white;
+}
+
+body.dark-theme #game_stats p,
+body.dark-theme .btn {
+    color: white;
+}
+
+body.dark-theme .card {
+    background-color: black;
+}
+
+#game_stats {
     display: flex;
-    flex-wrap: wrap;
-  }
+    justify-content: center;
+}
+
+#game_grid {
+    border: 2px tomato solid;
+    margin: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(3, 1fr);
+    gap: 10px;
+    perspective: 1000px;
+}
   
-  
-  .card {
+#game_grid.easy {
+    width: 600px;
+    height: 500px;
+}
+
+#game_grid.medium {
+    width: 800px;
+    height: 600px;
+}
+
+#game_grid.hard {
+    width: 1200px;
+    height: 800px;
+}
+
+
+.card {
     width: 33.3%;
     position: relative;
     transition: transform 1s;
     perspective: 1000px;
     transform-style: preserve-3d;
-  }
-  
-  
-  img {
+}
+
+
+img {
     width: 100%
-  }
-  
-  .front_face,
-  .back_face {
+}
+
+.back_face {
     position: absolute;
     backface-visibility: hidden;
-  }
-  
-  
-  .flip {
+}
+
+
+.flip {
     transform: rotateY(180deg);
-  }
-  
-  
-  .front_face {
+}
+
+
+.front_face {
     transform: rotateY(180deg);
-  }
+    position: absolute;
+    backface-visibility: hidden;
+}
+
+.col {
+    flex-basis: 100%;
+}
+
+#game_grid.easy .card {
+  width: 150px;
+  height: calc(100% / 2);
+}
+
+#game_grid.medium .card {
+  width: 150px;
+  height: 150px;
+}
+
+#game_grid.hard .card {
+    width: 150px;
+    height: 150px;
+}
